--- a/Gallery.html
+++ b/Gallery.html
@@ -13,9 +13,9 @@
             ROHL 94
         </div>
         <div class="navs">
-            <a href="Contact.html" target="_blank">Contact</a>
-            <a href="Gallery.html" target="_blank">Portfolio</a>
-            <a href="Index.html" target="_blank">About</a>
+            <a href="Contact.html">Contact</a>
+            <a href="Gallery.html" class="active">Portfolio</a>
+            <a href="Index.html">About</a>
         </div>
     </div>
     <div class="container">
@@ -70,6 +70,9 @@
                 </div>
             </div>
         </div>
-    </div>    
+    </div>
+    <footer class="footer">
+        <p>© 2019 Copyright</p>
+    </footer>    
 </body>
 </html>
