--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="Assets/CSS/AboutStyle.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="header">
+        <h1>ROHL 94</h1>
+    </div>
+    <div class="topnav">
+        <a href="Index.html" class="active">About</a>
+        <a href="Contact.html">Contact</a>
+        <a href="Gallery.html">Portfolio</a>
+    </div>
+    <div class="container">
+        <div class="fondoabout">
+            <div class="row">
+                <h2 style="margin-left: 5%;color: white; font-weight: bold">About me</h2>
+            </div>
+            <div>
+                <div class=" column profpic">
+                    <img src="Assets/Images/IMG-20170520-WA0032.jpg" style="width:100%">
+                </div>
+                <p id="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed eiusmod tempor incidunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                    laboris nisi ut aliquid ex ea commodi consequat. 
+                    Quis aute iure reprehenderit in voluptate velit esse cillum 
+                    dolore eu fugiat nulla pariatur. 
+                    Excepteur sint obcaecat cupiditat non proident, 
+                    sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </div>
+    </div>
+    <footer class="footer">
+        <p>© 2019 Copyright</p>
+    </footer> 
 </body>
 </html>
